# ChangeLog for media-gfx/xsane
# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/media-gfx/xsane/ChangeLog,v 1.84 2010/11/16 20:54:43 phosphan Exp $

  16 Nov 2010; Patrick Kursawe <phosphan@gentoo.org> xsane-0.996.ebuild,
  xsane-0.997.ebuild:
  Moving to virtual/jpeg.

  21 Jun 2010; Samuli Suominen <ssuominen@gentoo.org> xsane-0.997.ebuild:
  Restrict media-libs/lcms depend to old version.

*xsane-0.997 (03 Oct 2009)

  03 Oct 2009; Patrick Kursawe <phosphan@gentoo.org> +xsane-0.997.ebuild:
  Version bump, see bug #287360

  01 Oct 2009; Patrick Kursawe <phosphan@gentoo.org> xsane-0.996.ebuild:
  Removing duplicate desktop file (bug #286503).

  23 Jun 2009; Patrick Kursawe <phosphan@gentoo.org>
  +files/MissingCapsFlag.patch, xsane-0.996.ebuild:
  Adding a patch to make it work with sane-backends-1.0.20

  23 Jun 2009; Patrick Kursawe <phosphan@gentoo.org> metadata.xml,
  -xsane-0.995.ebuild, xsane-0.996.ebuild:
  Adding build-time blocker for sane-backends-1.0.20 and above, removing
  obsolete version, correcting metadata.

  01 May 2009; Raúl Porcel <armin76@gentoo.org> xsane-0.996.ebuild:
  sparc stable wrt #256597

  27 Feb 2009; Brent Baude <ranger@gentoo.org> xsane-0.996.ebuild:
  stable ppc64, bug 256597

  01 Feb 2009; nixnut <nixnut@gentoo.org> xsane-0.996.ebuild:
  ppc stable #256597

  01 Feb 2009; Markus Meier <maekke@gentoo.org> xsane-0.996.ebuild:
  amd64/x86 stable, bug #256597

  31 Jan 2009; Tobias Klausmann <klausman@gentoo.org> xsane-0.996.ebuild:
  Stable on alpha, bug #256597

  30 Jan 2009; Patrick Kursawe <phosphan@gentoo.org> -xsane-0.994.ebuild:
  Removed obsolete version.

*xsane-0.996 (29 Sep 2008)

  29 Sep 2008; Patrick Kursawe <phosphan@gentoo.org> +xsane-0.996.ebuild:
  Version bump. Does not install the HTML documentation twice any more and
  uses the .desktop file from upstream.

  10 Aug 2008; Tobias Klausmann <klausman@gentoo.org> xsane-0.995.ebuild: