@@ -1,6 +1,9 @@
 # ChangeLog for x11-misc/xxkb
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/x11-misc/xxkb/ChangeLog,v 1.19 2011/01/13 17:54:49 ranger Exp $
+# $Header: /var/cvsroot/gentoo-x86/x11-misc/xxkb/ChangeLog,v 1.20 2011/03/02 10:16:16 jlec Exp $
+
+  02 Mar 2011; Justin Lecher <jlec@gentoo.org> xxkb-1.11-r1.ebuild:
+  Correct Slots for gtk 3 introduction to tree
 
   13 Jan 2011; Brent Baude <ranger@gentoo.org> xxkb-1.11-r1.ebuild:
   stable ppc, bug 334691
