@@ -1,6 +1,14 @@
 # ChangeLog for media-gfx/xsane
-# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/media-gfx/xsane/ChangeLog,v 1.84 2010/11/16 20:54:43 phosphan Exp $
+# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/media-gfx/xsane/ChangeLog,v 1.85 2011/03/02 10:13:18 jlec Exp $
+
+  02 Mar 2011; Justin Lecher <jlec@gentoo.org> xsane-0.996.ebuild,
+  xsane-0.997.ebuild:
+  Correct Slots for gtk 3 introduction to tree
+
+  02 Mar 2011; Justin Lecher <jlec@gentoo.org> xsane-0.996.ebuild,
+  xsane-0.997.ebuild:
+  Correct Slots for gtk 3 introduction to tree
 
   16 Nov 2010; Patrick Kursawe <phosphan@gentoo.org> xsane-0.996.ebuild,
   xsane-0.997.ebuild:
